Corrected Links and Updatd logos

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -5,8 +5,8 @@
     "image": "mernchat",
     "category": "mern",
     "links": {
-      "view": "https://github.com/Himanshu664/MERN-Chat-App",
-      "code": "https://github.com/Himanshu664/MERN-Chat-App"
+      "view": "https://github.com/himanshu-malviya15/MERN-Chat-App",
+      "code": "https://github.com/himanshu-malviya15/MERN-Chat-App"
     }
   },
   {
@@ -16,7 +16,7 @@
     "category": "frontend",
     "links": {
       "view": "https://resume-builder-project-web.netlify.app/",
-      "code": "https://github.com/Himanshu664/Resume-Builder"
+      "code": "https://github.com/himanshu-malviya15/Resume-Builder"
     }
   },
   {
@@ -36,7 +36,7 @@
     "category": "mern",
     "links": {
       "view": "https://crypto-tracker-himanshu.netlify.app/",
-      "code": "https://github.com/Himanshu664/Crypto-Tracker"
+      "code": "https://github.com/himanshu-malviya15/Crypto-Tracker"
     }
   },
   {
@@ -45,8 +45,8 @@
     "image": "quiz",
     "category": "frontend",
     "links": {
-      "view": "https://himanshu664.github.io/Quiz/",
-      "code": "https://github.com/Himanshu664/Quiz"
+      "view": "https://himanshu-malviya15.github.io/Quiz/",
+      "code": "https://github.com/himanshu-malviya15/Quiz"
     }
   },
   {
@@ -55,8 +55,8 @@
     "image": "snake",
     "category": "frontend",
     "links": {
-      "view": "https://himanshu664.github.io/Snake-Game/",
-      "code": "https://github.com/Himanshu664/Snake-Game"
+      "view": "https://himanshu-malviya15.github.io/Snake-Game/",
+      "code": "https://github.com/himanshu-malviya15/Snake-Game"
     }
   }
 ]
